--- a/fontello/css/wiki-editor.css
+++ b/fontello/css/wiki-editor.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'wiki-editor';
-  src: url('../font/wiki-editor.eot?71396240');
-  src: url('../font/wiki-editor.eot?71396240#iefix') format('embedded-opentype'),
-       url('../font/wiki-editor.woff2?71396240') format('woff2'),
-       url('../font/wiki-editor.woff?71396240') format('woff'),
-       url('../font/wiki-editor.ttf?71396240') format('truetype'),
-       url('../font/wiki-editor.svg?71396240#wiki-editor') format('svg');
+  src: url('../font/wiki-editor.eot?19934393');
+  src: url('../font/wiki-editor.eot?19934393#iefix') format('embedded-opentype'),
+       url('../font/wiki-editor.woff2?19934393') format('woff2'),
+       url('../font/wiki-editor.woff?19934393') format('woff'),
+       url('../font/wiki-editor.ttf?19934393') format('truetype'),
+       url('../font/wiki-editor.svg?19934393#wiki-editor') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'wiki-editor';
-    src: url('../font/wiki-editor.svg?71396240#wiki-editor') format('svg');
+    src: url('../font/wiki-editor.svg?19934393#wiki-editor') format('svg');
   }
 }
 */
@@ -68,6 +68,7 @@
 .icon-numbered-list:before { content: '\f0cb'; } /* '' */
 .icon-strike:before { content: '\f0cc'; } /* '' */
 .icon-underline:before { content: '\f0cd'; } /* '' */
+.icon-add-table:before { content: '\f0ce'; } /* '' */
 .icon-superscript:before { content: '\f12b'; } /* '' */
 .icon-subscript:before { content: '\f12c'; } /* '' */
 .icon-heading:before { content: '\f1dc'; } /* '' */
