--- a/fontello/css/wiki-editor-codes.css
+++ b/fontello/css/wiki-editor-codes.css
@@ -3,11 +3,17 @@
 .icon-align-center:before { content: '\e801'; } /* '' */
 .icon-align-right:before { content: '\e802'; } /* '' */
 .icon-align-justify:before { content: '\e803'; } /* '' */
+.icon-insert-column-left:before { content: '\e804'; } /* '' */
 .icon-outdent:before { content: '\e805'; } /* '' */
 .icon-indent:before { content: '\e806'; } /* '' */
 .icon-bold:before { content: '\e807'; } /* '' */
 .icon-italic:before { content: '\e808'; } /* '' */
 .icon-font:before { content: '\e809'; } /* '' */
+.icon-insert-column-right:before { content: '\e80a'; } /* '' */
+.icon-insert-row-above:before { content: '\e80b'; } /* '' */
+.icon-insert-row-below:before { content: '\e80c'; } /* '' */
+.icon-delete-column:before { content: '\e80d'; } /* '' */
+.icon-delete-row:before { content: '\e80e'; } /* '' */
 .icon-bulleted-list:before { content: '\f0ca'; } /* '' */
 .icon-numbered-list:before { content: '\f0cb'; } /* '' */
 .icon-strike:before { content: '\f0cc'; } /* '' */
