--- a/fontello/css/wiki-editor.css
+++ b/fontello/css/wiki-editor.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'wiki-editor';
-  src: url('../font/wiki-editor.eot?19934393');
-  src: url('../font/wiki-editor.eot?19934393#iefix') format('embedded-opentype'),
-       url('../font/wiki-editor.woff2?19934393') format('woff2'),
-       url('../font/wiki-editor.woff?19934393') format('woff'),
-       url('../font/wiki-editor.ttf?19934393') format('truetype'),
-       url('../font/wiki-editor.svg?19934393#wiki-editor') format('svg');
+  src: url('../font/wiki-editor.eot?91249284');
+  src: url('../font/wiki-editor.eot?91249284#iefix') format('embedded-opentype'),
+       url('../font/wiki-editor.woff2?91249284') format('woff2'),
+       url('../font/wiki-editor.woff?91249284') format('woff'),
+       url('../font/wiki-editor.ttf?91249284') format('truetype'),
+       url('../font/wiki-editor.svg?91249284#wiki-editor') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'wiki-editor';
-    src: url('../font/wiki-editor.svg?19934393#wiki-editor') format('svg');
+    src: url('../font/wiki-editor.svg?91249284#wiki-editor') format('svg');
   }
 }
 */
@@ -59,11 +59,17 @@
 .icon-align-center:before { content: '\e801'; } /* '' */
 .icon-align-right:before { content: '\e802'; } /* '' */
 .icon-align-justify:before { content: '\e803'; } /* '' */
+.icon-insert-column-left:before { content: '\e804'; } /* '' */
 .icon-outdent:before { content: '\e805'; } /* '' */
 .icon-indent:before { content: '\e806'; } /* '' */
 .icon-bold:before { content: '\e807'; } /* '' */
 .icon-italic:before { content: '\e808'; } /* '' */
 .icon-font:before { content: '\e809'; } /* '' */
+.icon-insert-column-right:before { content: '\e80a'; } /* '' */
+.icon-insert-row-above:before { content: '\e80b'; } /* '' */
+.icon-insert-row-below:before { content: '\e80c'; } /* '' */
+.icon-delete-column:before { content: '\e80d'; } /* '' */
+.icon-delete-row:before { content: '\e80e'; } /* '' */
 .icon-bulleted-list:before { content: '\f0ca'; } /* '' */
 .icon-numbered-list:before { content: '\f0cb'; } /* '' */
 .icon-strike:before { content: '\f0cc'; } /* '' */
