--- a/fontello/css/wiki-editor.css
+++ b/fontello/css/wiki-editor.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'wiki-editor';
-  src: url('../font/wiki-editor.eot?66608592');
-  src: url('../font/wiki-editor.eot?66608592#iefix') format('embedded-opentype'),
-       url('../font/wiki-editor.woff2?66608592') format('woff2'),
-       url('../font/wiki-editor.woff?66608592') format('woff'),
-       url('../font/wiki-editor.ttf?66608592') format('truetype'),
-       url('../font/wiki-editor.svg?66608592#wiki-editor') format('svg');
+  src: url('../font/wiki-editor.eot?30390257');
+  src: url('../font/wiki-editor.eot?30390257#iefix') format('embedded-opentype'),
+       url('../font/wiki-editor.woff2?30390257') format('woff2'),
+       url('../font/wiki-editor.woff?30390257') format('woff'),
+       url('../font/wiki-editor.ttf?30390257') format('truetype'),
+       url('../font/wiki-editor.svg?30390257#wiki-editor') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'wiki-editor';
-    src: url('../font/wiki-editor.svg?66608592#wiki-editor') format('svg');
+    src: url('../font/wiki-editor.svg?30390257#wiki-editor') format('svg');
   }
 }
 */
@@ -71,6 +71,8 @@
 .icon-delete-column:before { content: '\e80d'; } /* '' */
 .icon-delete-row:before { content: '\e80e'; } /* '' */
 .icon-delete-table:before { content: '\e80f'; } /* '' */
+.icon-float-left:before { content: '\e811'; } /* '' */
+.icon-float-right:before { content: '\e812'; } /* '' */
 .icon-bulleted-list:before { content: '\f0ca'; } /* '' */
 .icon-numbered-list:before { content: '\f0cb'; } /* '' */
 .icon-strike:before { content: '\f0cc'; } /* '' */
