Refactored Header menu to dropdown

--- a/src/wiki-editor.scss
+++ b/src/wiki-editor.scss
@@ -1,4 +1,5 @@
 /* Define color palette */
+$palette-black: rgba(0, 0, 0, .85)!default
 $palette-gray: #eee!default;
 $palette-light-blue: #f1f8ff!default;
 $palette-dark-blue: #c8e1ff!default;
