--- a/src/components/DropdownMenu.scss
+++ b/src/components/DropdownMenu.scss
@@ -1,5 +1,28 @@
 .wiki-editor {
   .menu.dropdown {
+    cursor: pointer;
+    position: relative;
 
+    .label { position: relative; }
+    .label:after {
+      border-color: $fg-color-button-text transparent transparent transparent;
+      border-style: solid;
+      border-width: 4px;
+      content: '';
+      display: inline-block;
+      margin: 0 0 0 .25rem;
+      position: absolute;
+      right: 0;
+      top: .5rem;
+    }
+
+    .flyout {
+      border: 1px solid $fg-color-button-text;
+      background: #fff;
+      padding: .25rem;
+      position: absolute;
+      white-space: nowrap;
+      top: 100%;
+    }
   }
 }
